# notepad

./: Cargo.toml  README.fr.md  README.md
.github/workflows/: ci.yml
src/: app.rs  main.rs  preferences.rs  ui.rs  update.rs
