[package]
name = "notepad"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "A simple notepad application built with iced"
repository = "https://github.com/Olivier6431/notepad"

[dependencies]
iced = { version = "0.13", features = ["debug", "tokio"] }
rfd = "0.15"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
encoding_rs = "0.8"